databruce/static/databruce/css/new_style.css
/* ... */
button.nav-link * {
    display: inline-flex;
    vertical-align: middle;
    justify-content: center;
    align-items: center;
}

button.nav-link .badge {
    font-weight: 500 !important;
    font-size: 0.75rem !important;
    display: inline-flex;
    vertical-align: middle;
    padding: 0.25em 0.6em 0.25em 0.6em !important;
    /* border-radius: 0.7rem !important; */
}

button.nav-link .badge {
    margin-left: 0.25rem !important;
}

#albumTable_wrapper>.dt-layout-table {
    margin-top: 0 !important;
}

.album-breakdown .list-group-item {
    font-size: var(--text-3xs) !important;
}

.py-0\.5 {
    padding-top: 0.125rem !important;
    padding-bottom: 0.125rem !important;
}

.card-img-top {
    border-top-left-radius: var(--bs-card-inner-border-radius) !important;
    border-top-right-radius: var(--bs-card-inner-border-radius) !important;
    border-bottom-left-radius: 0px !important;
    border-bottom-right-radius: 0px !important;
}

.fc-h-event .fc-event-main {
    color: rgb(var(--base-content)) !important;
}

.calendar.event:hover {
    text-decoration: none !important;
    box-shadow: inset 0 0 100px 100px rgba(0, 0, 0, 0.1);
}

.calendar.release-event {
    background-color: rgb(var(--accent)) !important;
    border-color: rgb(var(--accent)) !important;
}

.calendar.release-event-past {
    background-color: rgb(var(--base-100)) !important;
    border-color: rgb(var(--accent)) !important;
}

.calendar.release-event-birthday {
    background-color: rgb(var(--base-100)) !important;
    border-color: rgb(var(--primary-text)) !important;
}

.calendar.event-run {
    background-color: rgb(var(--secondary)) !important;
    border-color: rgb(var(--secondary)) !important;
}

.calendar.event {
    color: rgb(var(--base-content)) !important;
}

.calendar.event.show {
    color: rgb(var(--primary-content)) !important;
    background-color: rgb(var(--primary)) !important;
}

.calendar.release-event .fc-event-main,
.calendar.event-run .fc-event-main {
    color: white !important;
}

.calendar.release-event-past .fc-event-main {
    color: rgb(var(--accent)) !important;
    font-weight: 500 !important;
}

.calendar.release-event-birthday .fc-event-main {
    color: rgb(var(--primary-text)) !important;
    font-weight: 500 !important;
}

.calendar.release-event-birthday .fc-event-main::before {
    font-family: "bootstrap-icons" !important;
    content: "\F6ED" !important;
    margin-right: 0.25rem !important;
    vertical-align: middle;
}

.prefix-container {
    display: flex !important;
}

.prefix-container>span.prefix {
    font-weight: 500 !important;
    margin-right: 0.5rem !important;
}

.prefix-container>span.prefix::after {
    content: ":";
}

.prefix-container>span.value {
    text-wrap: nowrap !important;
}

.map-container {
    display: flex;
    flex-direction: column;
}

#map-object {
    height: 500px !important
}

@keyframes shadcn-entrance {
    from {
        opacity: 0;
        transform: scale(0.95) translateY(-2px);
    }

    to {
        opacity: 1;
        transform: scale(1) translateY(0);
    }
}

/* .dropdown-menu:not(.ui-autocomplete).show {
    padding-top: 0 !important;
    padding-bottom: 0 !important;
    max-height: 250px;
    overflow-y: scroll;
    overflow-x: hidden;
    background-color: rgb(var(--base-100)) !important;
    border-radius: var(--bs-border-radius) !important;
    padding: 0.3rem !important;
} */

/* Initial state: Hidden and transparent */
.dropdown-menu:not(.ui-autocomplete) {
    opacity: 0;
    visibility: hidden;
    overflow-y: scroll;
    padding: 0.3rem !important;
    overflow-x: hidden;
    transform: translateY(2px);
    background-color: rgb(var(--base-100)) !important;
    border-radius: var(--bs-border-radius) !important;
}

.dropdown-menu.show {
    opacity: 1;
    visibility: visible;
    max-height: 250px;
    box-shadow: var(--bs-box-shadow);
}



.ui-menu {
    border: var(--bs-dropdown-border-width) solid var(--bs-dropdown-border-color);
}

/* jquery autocomplete menu, display above all and scroll */
.ui-autocomplete {
    max-height: 250px;
    overflow-y: scroll;
    overflow-x: hidden;
    position: fixed;
    background-color: rgb(var(--base-100)) !important;
    z-index: 1100 !important;
    border-radius: var(--bs-border-radius);
    padding: 0.3rem !important;
}

.ui-widget {
    font-family: inherit !important;
    font-size: var(--text-sm) !important;
    border: var(--bs-dropdown-border-width) solid var(--bs-dropdown-border-color) !important;
}

/* Individual item styling */
.ui-menu-item {
    padding: 0 !important;
}

.ui-menu-item .ui-menu-item-wrapper {
    display: block;
    padding: 0.25rem 1rem !important;
    font-family: inherit !important;
    border: 0;
}

/* Hover/Focus state */
.ui-menu-item .ui-menu-item-wrapper.ui-state-active {
    color: rgb(var(--primary-content)) !important;
    background-color: rgb(var(--primary)) !important;
    border-radius: 0.3rem !important;
    border: none;
    margin: 0;
}

figure {
    display: flex;
    flex-wrap: wrap;
    justify-content: center;
}

figure img {
    object-position: top;
    object-fit: contain;
    border-radius: var(--bs-border-radius);
}

figure.half {
    gap: 1rem;
}

a>img {
    justify-content: center !important;
}

figure:not(.half) img {
    width: 50% !important;
    height: auto !important;
}

figure.full img {
    width: 100% !important;
    height: auto !important;
}

figure.half img {
    width: calc(50% - 0.5rem);
    height: auto !important;
}

figcaption {
    width: 100%;
    text-align: center;
}



pre {
    padding: 1rem !important;
    border-radius: var(--bs-border-radius) !important;
    background-color: rgb(var(--base-300)) !important;
    word-wrap: break-word;
    white-space: pre-wrap;
    overflow-x: auto;
    word-break: normal !important;
    font-size: var(--text-sm);
    line-height: 1.25rem;
}

